[gd_scene load_steps=12 format=3 uid="uid://cf7q8pdri77u8"]

[ext_resource type="PackedScene" uid="uid://wp3feiucmjg2" path="res://Scenes/CameraSystem.tscn" id="1_iqlcs"]
[ext_resource type="Script" path="res://Scripts/GameMenus.gd" id="1_yw8my"]
[ext_resource type="Script" path="res://Scripts/Btt_Back.gd" id="3_753ag"]
[ext_resource type="PackedScene" uid="uid://cf5p3mtiyf35k" path="res://Scenes/TPS_Rigid_Player.tscn" id="4_684uw"]

[sub_resource type="NavigationMesh" id="NavigationMesh_p2oj2"]
vertices = PackedVector3Array(-1, 0.5, -19.75, 0.25, 0.5, -20, 0.25, 0.5, -24.5, -24.5, 0.5, -24.5, -1, 0.5, -18, -24.5, 0.5, -24.5, -24.5, 0.5, 24.5, 0.25, 0.5, 24.5, -1, 0.5, -18, -1, 0.5, -19.75, -24.5, 0.5, -24.5, 0.25, 0.5, 24.5, 0.25, 0.5, -17.75, -1, 0.5, -18, 0.25, 0.5, -24.5, 0.25, 0.5, -20, 1.25, 0.5, -19.75, 24.5, 0.5, -24.5, 1.25, 0.5, -18, 0.25, 0.5, 24.5, 24.5, 0.5, 24.5, 24.5, 0.5, -24.5, 24.5, 0.5, -24.5, 1.25, 0.5, -19.75, 1.25, 0.5, -18, 1.25, 0.5, -18, 0.25, 0.5, -17.75, 0.25, 0.5, 24.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(7, 6, 4), PackedInt32Array(4, 6, 5), PackedInt32Array(10, 9, 8), PackedInt32Array(13, 12, 11), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 17), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(24, 23, 22), PackedInt32Array(27, 26, 25)]

[sub_resource type="BoxMesh" id="BoxMesh_1a2yw"]
size = Vector3(50, 1, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_3pjj1"]
size = Vector3(50, 1, 50)

[sub_resource type="BoxMesh" id="BoxMesh_188c2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o3cx5"]

[sub_resource type="BoxMesh" id="BoxMesh_4vxd3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eg4i7"]

[node name="game" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameMenus" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yw8my")

[node name="Bg_Menus" type="ColorRect" parent="CanvasLayer/GameMenus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.521569)

[node name="Resume" type="Button" parent="CanvasLayer/GameMenus"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -120.0
offset_right = 64.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume
"

[node name="Retry" type="Button" parent="CanvasLayer/GameMenus"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry
"

[node name="Options" type="Button" parent="CanvasLayer/GameMenus"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Options
"

[node name="Quit" type="Button" parent="CanvasLayer/GameMenus"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"

[node name="Menu_Options" type="Control" parent="CanvasLayer/GameMenus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg_Options" type="ColorRect" parent="CanvasLayer/GameMenus/Menu_Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Btt_Back" type="Button" parent="CanvasLayer/GameMenus/Menu_Options"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 184.0
offset_right = 64.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
text = "Back
"
script = ExtResource("3_753ag")

[node name="game manager" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
shadow_enabled = true

[node name="CameraSystem" parent="." instance=ExtResource("1_iqlcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6833, 0)
collision_mask = 0
spring_length = 10.0
displace_Height = 1.0
mouse_Speed = 0.25
playerRef = NodePath("../TPS_Rigid_Player")

[node name="TPS_Rigid_Player" parent="." instance=ExtResource("4_684uw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.90814, 9.60528)
custom_integrator = true
continuous_cd = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_p2oj2")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]
collision_layer = 2
collision_mask = 15
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_1a2yw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_3pjj1")

[node name="StaticBody3D2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -18.8)
collision_layer = 2
collision_mask = 15
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_188c2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_o3cx5")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.15338, 0)
collision_layer = 4
collision_mask = 31
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("BoxMesh_4vxd3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_eg4i7")

[connection signal="button_down" from="CanvasLayer/GameMenus/Resume" to="CanvasLayer/GameMenus" method="_on_resume_button_down"]
[connection signal="button_down" from="CanvasLayer/GameMenus/Retry" to="CanvasLayer/GameMenus" method="_on_retry_button_down"]
[connection signal="button_down" from="CanvasLayer/GameMenus/Options" to="CanvasLayer/GameMenus" method="_on_options_button_down"]
[connection signal="button_down" from="CanvasLayer/GameMenus/Quit" to="CanvasLayer/GameMenus" method="_on_quit_button_down"]
[connection signal="button_down" from="CanvasLayer/GameMenus/Menu_Options/Btt_Back" to="CanvasLayer/GameMenus/Menu_Options/Btt_Back" method="_on_button_down"]
